# dynamicprefixvici

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  dynamicprefixvici.c  install.sh
